--- a/src/Components/Body/Item.css
+++ b/src/Components/Body/Item.css
@@ -1,4 +1,7 @@
 .container-card{
-    margin-right: 20px;
-    margin-left: 20px;
+   padding-left: 20px;
+    padding-right: 20px;
+    border: outset;
+    border-radius: 5px;
+    border-color: black;
 }
