--- a/src/Components/Body/ItemsContainers/Item.css
+++ b/src/Components/Body/ItemsContainers/Item.css
@@ -3,5 +3,5 @@
     padding-right: 20px;
     border: solid;
     border-radius: 5px;
-    border-color: black;
+    border-color:  rgb(135, 163, 122);
 }
